apps/rollout/overlays/canary/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: canary-stable
spec:
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: canary
---
apiVersion: v1
kind: Service
metadata:
  name: canary-canary
spec:
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: canary
